--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@ $^{3}$Department of Physics, Khalifa University, P.O. Box 127788, Abu Dhabi, Uni
 \begin{abstract}
 We consider the synchrotron emission from electrons out in the Galactic halo region where the Fermi bubble structures reside. Utilising a simple analytical expression for the non-thermal electron distribution and a toy magnetic field model, we simulate polarised synchrotron emission maps at a frequency of 30~GHz. Comparing these maps with observational data, we obtain constraints on the parameters of our toy Galactic halo magnetic field model. Utilising this parameter value range for the toy magnetic field model, we determine the corresponding range of arrival directions and suppression factors of ultra high energy cosmic rays (UHECRs) from potential local source locations.
 
-We find high levels (down to 2\%) of flux suppression and large deflection angles ($>65^{\circ}$) for source locations whose line-of-sight pass through the Galactic halo bubble region. We conclude that the magnetic field out in this Galactic halo region can strongly dominate the level of deflection UHECRs experience whilst propagating from local sources to Earth.
+We find high levels of flux suppression (down to 2\%) and large deflection angles ($>80^{\circ}$) are possible for source locations whose line-of-sight pass through the Galactic halo bubble region. We conclude that the magnetic field out in the Galactic halo region can strongly dominate the level of deflection UHECRs experience whilst propagating from local sources to Earth.
 \end{abstract}
 
 \begin{keywords}
@@ -219,7 +219,7 @@ In Appendix~\ref{Appendix_C} an example case for these calculations is provided 
 %% Grid details
 Utilising the setup described in Section~\ref{Methods}, we generate a synthetic polarised synchrotron emission map for each parameter set of our toy model. The toy model comprises of 5 free parameters, (see Table~\ref{Para_table}). The radial cut off of the magnetic field and electron distribution is kept identical ($R_{\mathrm{Mag}}$ = $R_{\mathrm{el}}$) and the same applies to the azimuthal cut-off ($Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$). The reason for this constraint is that the synchrotron radiation level depends on both the non-thermal electron density and the magnetic field strength. Thus, even if the spatial extend of the magnetic field differs from the electron distribution, one can only probe the magnetic field in the region where both the magnetic field and non-thermal electrons are present. 
 For the spatial parameter scan, the parameter values scanned over for $R_{\mathrm{el}}$ and $Z_{\mathrm{el}}$ are 2~kpc to 19~kpc, with a scanning step size of 1~kpc. 
-However, the range over which both $B_{\rm str}$ and $B_{\rm tur}$ are scanned is binned logarithmically with 30 bins per decade between 2$~\mu$G to 18$~\mu$G. Likewise, for the $C_{\rm norm}$ we scanned between $10^{-14} \rm cm^{-3}$ to $10^{-11} \rm cm^{-3}$ with 10 bins per decade. The line-of-sight integration is carried out up to 14~kpc away from the Galactic center. Note that, for integration lengths of 8~kpc and more from the Galactic center, the reduced chi-square for the best fit case only differs in the 3rd decimal place. However, for a sufficient coverage of the sky we chose the value of 14~kpc.
+However, the range over which both $B_{\rm str}$ and $B_{\rm tur}$ are scanned is binned logarithmically with 30 bins per decade between 2$~\mu$G and 18$~\mu$G. Likewise, for the $C_{\rm norm}$ we scanned between $10^{-14} \rm cm^{-3}$ and $10^{-11} \rm cm^{-3}$, adopting 10 bins per decade. 
 
 %% Polarised Skymap
 
@@ -261,10 +261,10 @@ $B_{\mathrm{str}} $& $3.96_{-1.96}^{+6.63} ~ \mu$G & Structured field strength \
 $B_{\mathrm{tur}} $& $ 6.72_{-3.56}^{+9.97} ~\mu$G & Turbulent field strength\\
 \hline
 \rule{0pt}{3ex}
-$R_{\mathrm{Mag}}$ = $R_{\mathrm{el}}$ & $5_{0}^{+1}$~kpc & Radial cut off \\
+$R_{\mathrm{Mag}}$ = $R_{\mathrm{el}}$ & $5_{-0}^{+1}$~kpc & Radial cut off \\
 \hline
 \rule{0pt}{3ex}
-$Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$ & $6_{0}^{+1}$~kpc & Azimuthal cut off\\
+$Z_{\mathrm{Mag}}$ = $Z_{\mathrm{el}}$ & $6_{-0}^{+1}$~kpc & Azimuthal cut off\\
 \hline
 \rule{0pt}{3ex} 
 ${\rm{log_{10}}}~(C_{\rm norm} [{\rm cm}^{-3}]$) & ${-11.72}_{{-0.93}}^{{+0.62}}$ & Electron normalisation at 10~GeV\\
@@ -287,7 +287,9 @@ In Fig.~\ref{fig:Skymaps} the smoothened skymap obtained from the best-fit value
 %% Polarisation fraction
 The polarisation fraction obtained by our best-fit toy-model, given in Fig.~\ref{fig:Skymaps}, was calculated taking the ratio of the polarised to the total intensity. The polarisation fraction for the best-fit toy model is comparable to the values as seen in the observation data of \citet{WMAP_Page} and \citet{Carretti_2013}.
 
-We also did the scan with an exponential cut off in the turbulent fields similar to the one in structured fields ($B_{\rm tur} {\rm{e}}^{(-|z|/Z_{\rm{mag}})} {\rm{e}}^{(-|r|/R_{\rm{mag}}})$). In this case the best-fit quality decreases and we get ${B_{\rm str}}$ $<$ 2.7 $\mu$~G and $B_{\rm tur}$ $>$ 14.3 $\mu$~G  combined with large values for $R_{\rm Mag}$ (12~kpc $<$ $R_{\rm Mag}$ $<$ 13~kpc) and $Z_{\rm Mag}$ (11~kpc $<$ $Z_{\rm Mag}$ $<$ 16~kpc) and ${\rm log_{10}} C_{\rm norm}$ ( -12.44 $<$ ${\rm log_{10}}~C_{\rm norm}$ $<$  -12.34 ).
+\iffalse
+We also did the scan with an exponential cut off in the turbulent fields similar to the one in structured fields ($B_{\rm tur} {\rm{e}}^{-|z|/Z_{\rm{mag}}} {\rm{e}}^{-r/R_{\rm{mag}}}$). In this case, the best-fit quality decreases and we get ${B_{\rm str}}$ $<$ 2.7 $\mu$G and $B_{\rm tur}$ $>$ 14.3 $\mu$G  combined with large values for $R_{\rm Mag}$ (12~kpc $<$ $R_{\rm Mag}$ $<$ 13~kpc) and $Z_{\rm Mag}$ (11~kpc $<$ $Z_{\rm Mag}$ $<$ 16~kpc) and ${\rm log_{10}} C_{\rm norm}$ ( -12.44 $<$ ${\rm log_{10}}~C_{\rm norm}$ $<$  -12.34 ).
+\fi
 
 % \subsubsection{Results with cut off in turbulent fields}
 
@@ -342,36 +344,37 @@ In figure~\ref{fig:AD_Plots} we show:
     of cosmic rays from UHECR candidate sources Cen~A and NGC~253. Similar to the above case of the magnification maps we backtrack cosmic rays starting from Earth until they reached an escape radius of 20~kpc from the Galactic centre. The cosmic ray arrival directions from a region of $5^{\circ}$ from the source are then binned.  Like the magnification maps, we normalise these maps to the peak value of the histogram densities in the source region for the case of no magnetic fields.  This gives a normalised value of the number of hits ('Magn.') obtained. Analogous to the magnification maps the \textbf{top}, \textbf{middle} and \textbf{bottom} plots denote the 'Best-fit', 'Minimum' and 'Maximum' cases, respectively. 
     \end{enumerate}
 
-The deflections of UHECRs in the Galactic magnetic field are sensitive to both the structured and turbulent field components of the field in different ways. One of the first effects worth noting is the {\bf suppression effect} for cosmic rays from certain regions of the sky. For the 'Maximum' case, the toy magnetic field model gives rise to the largest suppression factor level in the magnification map, in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). These suppressions and enhancements of UHECRs from different regions of the sky are also seen in the skymaps provided for two potential UHECR sources, namely Cen~A (lon = $\rm -50.49^{\circ}$, lat = $\rm 19.42^{\circ}$) and NGC~253 (lon = $\rm 97.36^{\circ}$, lat = $\rm -87.96^{\circ}$). Because of their positions in the sky, both of these sources lie in the suppression region of the magnification maps for both the 'Best-fit' and 'Maximum' cases. In particular, we note that for NGC~253, the 'Maximum' toy model case leads to a suppression level of $\approx 5\%$ of the level that would arrive for the no magnetic field case, and $\approx 26\%$ for Cen~A.
+The deflections of UHECRs in the Galactic magnetic field are sensitive to both the structured and turbulent field components of the field in different ways. One of the first effects worth noting is the {\bf suppression effect} for cosmic rays from certain regions of the sky. For the 'Maximum' case, the toy magnetic field model gives rise to the largest suppression factor level in the magnification map, in comparison to the 'Best-fit' and 'Minimum' cases (see Table~\ref{Para_table}). These suppressions and enhancements of UHECRs from different regions of the sky are also seen in the skymaps provided for two potential UHECR sources, namely Cen~A (lon = $\rm -50.49^{\circ}$, lat = $\rm 19.42^{\circ}$) and NGC~253 (lon = $\rm 97.36^{\circ}$, lat = $\rm -87.96^{\circ}$). Because of their positions in the sky, both of these sources lie in the suppression region of the magnification maps for both the 'Best-fit' and 'Maximum' cases. In particular, we note that for NGC~253, the 'Maximum' toy model case leads to a suppression level of $\approx 2\%$ of the level that would arrive for the no magnetic field case, and $\approx 31\%$ for Cen~A.
 
 A second effect introduced by the turbulent magnetic fields is the {\bf spreading effect} (mean deflection angle) of cosmic rays around their originating source direction. In order to quantify this effect, a list is provided below of the mean deflection angle, ($\sigma_{\rm source}$), between the mean direction and the arrival directions of the cosmic rays for the two candidate sources considered:
 \newline
-\Vasu{Changes added here}
 \begin{itemize}
         \item Best fit - $\sigma_{\rm NGC~253} = 33^{\circ}$ , {$\sigma_{\rm Cen~A} = 35^{\circ}$}
         \item Minimum - $\sigma_{\rm NGC~253} = 16^{\circ}$ , $\sigma_{\rm Cen~A} = 21^{\circ}$
-        \item Maximum - $\sigma_{\rm NGC~253} = 67^{\circ}$, $\sigma_{\rm Cen~A} = 59^{\circ}$
+        \item Maximum - $\sigma_{\rm NGC~253} = 80^{\circ}$, $\sigma_{\rm Cen~A} = 59^{\circ}$
 \end{itemize}
 
 In comparison to the magnitude of these spreading angles, the mean deflection angle for Cen~A and NGC~253 from the JF12 torroidal halo field (JF12 halo) \citep{JF12}  are  $\sigma_{\rm NGC~253} = 9^{\circ}$ , and {$\sigma_{\rm Cen~A} = 22^{\circ}$}.  The spread of the cosmic rays obtained for our toy model are therefore potentially considerably larger (up to 5-10 times bigger) than those obtained for the JF12 toroidal halo. The primary driver of this difference is that our toy model possesses a larger level of turbulent magnetic fields than structured fields. It is also worth noting that the mean deflection angle of Cen A ($\sigma_{\rm Cen~A} = 35^{\circ}$) for the 'Best-fit' case of our toy model is comparable with the Pierre Auger Observatory (PAO) observations~\citep{PierreAuger_2014, Auger_ICRC_2021}. 
 
 Additional to this spreading effect, the presence of a structured field component in the magnetic field model leads to the {\bf coherent deflection} of the mean direction of the ensemble of cosmic rays away from the source direction. Following the propagation of cosmic rays from the two candidate sources NGC~253 and Cen~A, the mean source positions (lon, lat) for the three cases are as follows:
 \begin{itemize}
-    \item Best-fit - NGC~253: ($5^{\circ}$,$-65^{\circ}$) \& Cen~A: ($-48^{\circ}$,$8^{\circ}$) 
+    \item Best fit - NGC~253: ($2^{\circ}$,$-63^{\circ}$) \& Cen~A: ($-50^{\circ}$,$5^{\circ}$) 
     \item Minimum - NGC~253: ($7^{\circ}$,$-63^{\circ}$) \& Cen~A: ($-35^{\circ}$,$15^{\circ}$) 
-    \item Maximum - NGC~253: ($17^{\circ}$,$-40^{\circ}$) \& Cen~A: ($-50^{\circ}$,$13^{\circ}$) 
+    \item Maximum - NGC~253: ($-39^{\circ}$,$-88^{\circ}$) \& Cen~A: ($-50^{\circ}$,$-0.2^{\circ}$) 
 \end{itemize}
 
-In comparison, the mean shifted positions from the JF12 halo model for the two sources are  NGC~253: ($1^{\circ}$,$-33^{\circ}$) \& Cen~A: ($-47^{\circ}$,$-1^{\circ}$).
+In comparison, the mean shifted positions from the JF12 halo model for the two sources are  NGC~253: ($-0.8^{\circ}$,$-34^{\circ}$) \& Cen~A: ($-44^{\circ}$,$-1^{\circ}$).
 
-Additionally, for the case of cosmic rays from NGC~253, an interesting difference between our toy model and the JF12 halo model is worth noting. For the JF12 halo model (see Appendix~\ref{Appendix_D}), the mean position of cosmic rays from NGC~253 is situated at roughly a latitude of $-33^{\circ}$ (also seen in \citet{Arjen_2021}). \Vasu{Changed here} In contrast to this, in our 'Best-fit' toy model case this value is at approximately $-65^{\circ}$, which would be in better agreement with the PAO observations~\citep{Auger_Starburst2018} if this southern Galactic hemisphere hotspot does indeed originate from NGC~253. This difference in the position of mean direction is again an effect of our toy model having weaker structured fields in comparison to turbulent fields (see Table ~\ref{Para_table}), since structured fields dictate the extent of the mean deflection angle from the source position. 
+Additionally, for the case of cosmic rays from NGC~253, an interesting difference between our toy model and the JF12 halo model is worth noting. For the JF12 halo model (see Appendix~\ref{Appendix_D}), the mean shifted position of cosmic rays from NGC~253 is situated at roughly a latitude of $-34^{\circ}$ (also seen in \citet{Arjen_2021}). In contrast to this, in our 'Best-fit' toy model case this value is at approximately $-63^{\circ}$, which would be in better agreement with the PAO observations~\citep{Auger_Starburst2018} if this southern Galactic hemisphere hotspot does indeed originate from NGC~253. This difference in the position of mean direction is again an effect of our toy model having weaker structured fields in comparison to turbulent fields (see Table ~\ref{Para_table}), since structured fields dictate the extent of the mean deflection angle from the source position. 
 
-The suppression, spreading and coherent deflection effects place challenges on the association of cosmic rays to their originating sources. It can be seen that the 'Maximum' toy model magnetic field would make associating cosmic rays to their source extremely challenging at the energies considered, whereas the 'Best-fit' or 'Minimum' cases make this possible. This is due to the fact that the structured fields are responsible for the overall direction of the particle deflections, whereas turbulent fields are responsible for spreading out the directions of the particle deflections around this overall deflected direction. For cases in which the turbulent magnetic field component dominates, and this field strength component is large, the source directions can be completely washed-out. This washing-out of the source association is evident for the 'Maximum' case in Fig.~\ref{fig:AD_Plots}, cosmic rays from sources like NGC~253 are largely deflected from the source position by the magnetic field structure with a mean deflection angle of $\sigma_{\rm NGC~253} = 67^{\circ}$. Likewise, in the case of Centaurus~A the final positions are spread out over a large region of the sky with a mean deflection angle of $\sigma_{\rm Cen~A} = 59^{\circ}$, making association with the source position challenging. From both the magnification and arrival direction maps in Fig.~\ref{fig:AD_Plots}, it is evident that the best-fit and lower extreme ('Minimum') parameters allow some degree of association of the deflected UHECRs with their original source position. However, in the upper extreme ('Maximum') parameters, such a connection between the point of origin of cosmic rays and their final positions is heavily erased. 
+The suppression, spreading and coherent deflection effects place challenges on the association of cosmic rays to their originating sources. It can be seen that the 'Maximum' toy model magnetic field would make associating cosmic rays to their source extremely challenging at the energies considered, whereas the 'Best-fit' or 'Minimum' cases make this possible. This is due to the fact that the structured fields are responsible for the overall direction of the particle deflections, whereas turbulent fields are responsible for spreading out the directions of the particle deflections around this overall deflected direction. For cases in which the turbulent magnetic field component dominates, and this field strength component is large, the source directions can be completely washed-out. This washing-out of the source association is evident for the 'Maximum' case in Fig.~\ref{fig:AD_Plots}, cosmic rays from sources like NGC~253 are largely deflected from the source position by the magnetic field structure with a mean deflection angle of $\sigma_{\rm NGC~253} = 80^{\circ}$. Likewise, in the case of Centaurus~A the final positions are spread out over a large region of the sky with a mean deflection angle of $\sigma_{\rm Cen~A} = 59^{\circ}$, making association with the source position challenging. From both the magnification and arrival direction maps in Fig.~\ref{fig:AD_Plots}, it is evident that the best-fit and lower extreme ('Minimum') parameters allow some degree of association of the deflected UHECRs with their original source position. However, in the upper extreme ('Maximum') parameters, such a connection between the point of origin of cosmic rays and their final positions is heavily erased. 
 
 \section{Conclusions}
 \label{Conclusions}
 
-Utilising our toy model for the Galactic halo magnetic field, and making comparisons of the synchrotron emission predicted by it to the Planck 30~GHz data, we explore the region of model parameters capable of providing a good description of the data. Significant evidence is found for the presence of an extended magnetic field component out in the Galactic halo region. Our results are compatible with the Galactic halo magnetic field extending to 6~kpc in height above the Galactic disc. The total magnetic field content in the halo region from the best fit parameter set is $\approx 10^{55}$~ergs (with a comparable total energy in 1~GeV cosmic ray protons of $\approx 6\times 10^{55}$~ergs). We note that these values are comparable with observational inference made in \cite{eROSITA} which indicated the presence of some $10^{56}$~ergs of thermal particles in the Galactic halo.
+Utilising our toy model for the Galactic halo magnetic field, and making comparisons of the synchrotron emission predicted by it to the Planck 30~GHz data, we explore the region of model parameters capable of providing a good description of the data. Significant evidence is found for the presence of an extended magnetic field component out in the Galactic halo region. Our results are compatible with $\sim 7\mu$G Galactic halo magnetic field extending to 6~kpc in height above the Galactic disc, consistent with the magnetic field strength estimates in \cite{Carretti_2013} and the spatial extension scales in \cite{Su_2012}. The total magnetic field content in the halo region from the best fit parameter set is $\approx 10^{55}$~ergs. 
+%(with a comparable total energy in 1~GeV cosmic ray protons of $\approx 6\times 10^{55}$~ergs). 
+We note that these values are comparable with observational inference made in \cite{eROSITA} which indicated the presence of some $10^{56}$~ergs of thermal particles in the Galactic halo.
 In comparison to these energy contents, the total magnetic field energy content in the halo field component of the JF12 model is $4\times 10^{54}$~ergs and $3\times  10^{54}$~ergs for the toroidal halo and X-field respectively \citep{Taylor_2019}.
 
 Using the maximum and minimum constraints on the magnetic field model parameter values, the range of deflection that UHECRs experience in passing through such Galactic halo magnetic field structure was subsequently investigated. A significant range in predictions of both: a) the magnification of different regions of the extragalactic sky, and b) the deflection of cosmic rays arriving from different local extragalactic sources was found. This angular scale prediction from our magnetic field model are also in agreement with PAO observations~\citep{PierreAuger_2014, Auger_ICRC_2021}, for both the hotspot around Cen~A and the potential hotspot from NGC~253.
@@ -399,7 +402,7 @@ We adopt a narrow wavelength range for the turbulent fields, $L_{\rm min}=200$~p
   \delta B^{2}  =\frac{B_{0}^{2}}{q-1}\left[1-\left(\frac{L_{\rm min}}{L_{\rm max}}\right)^{q-1}\right] 
 \end{equation}
 Usually (for typical values of the turbulence cascade index, $q$,
-considered) this integral is insensitive to $L_{\rm min}$ , being dominated by the longest mode values, so where one truncates the lower end of the integral has only a small effect. The artificial enhancement of $B_0^2$ due to the truncation that we adopt is $\left[1-(1/2)^{q-1}\right]^{-1}$, which for $q=5/3$ is 2.7, corresponding to $B_0$ being artificially enhanced by $\sim $60\% due to the early truncation.
+considered) this integral is insensitive to $L_{\rm min}$ , being dominated by the longest mode values, so where one truncates the lower end of the integral has only a small effect. The artificial enhancement of $B_0^2$ due to the truncation that we adopt is $\left[1-(1/2)^{q-1}\right]^{-1}$, which for $q=5/3$ is 2.7, corresponding to $B_0$ being artificially enhanced by $\sim $60\% due to the early truncation of the turbulent spectrum adopted.
 
 
 \section{Turbulent field spectrum}
@@ -445,7 +448,7 @@ In case II we apply similar calculations to case I, however, now the angles are 
 We calculate the arrival directions of cosmic rays for two candidate sources, Cen~A and NGC~253, for the JF12 toroidal halo model~\citep{JF12}, shown in Fig.~\ref{JF12_AD}. We normalise these binned arrival directions by the peak value of the histogram obtained from the same setup without magnetic fields present. It can be seen from Fig.~\ref{JF12_AD} that the JF12 toroidal halo displaces the binned arrival directions to much higher latitudes in the case of NGC~253. This is because the structured field strength in the JF12 torroidal halo is stronger than the turbulent field and hence the mean deflection from the source position is larger.
 \begin{figure*}
 \centering
-\includegraphics[width=0.60\linewidth]{Images/Bins_180_CenA_NGC253_JF12_Halo_40_EeV.png}
+\includegraphics[width=0.60\linewidth]{Images/AD_30kpc/New_Bins_180_CenA_NGC253_JF12_Halo_40_EeV.png}
  \caption{Arrival direction map of cosmic rays (with $R \approx 6 \times 10^{18}$~V) deflected from the JF12 halo for two potential UHECR sources. It can be seen that the mean direction of the deflection for the JF12 toroidal halo is at a higher latitude than for the toy model, shown in Fig.~\ref{fig:AD_Plots}.}
 \label{JF12_AD}
 \end{figure*}
